add post about how the blog works

--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgd4df072" class="outline-2">
-<h2 id="orgd4df072">Convolution</h2>
-<div class="outline-text-2" id="text-orgd4df072">
+<div id="outline-container-org09a5358" class="outline-2">
+<h2 id="org09a5358">Convolution</h2>
+<div class="outline-text-2" id="text-org09a5358">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org99d55ee" class="outline-3">
-<h3 id="org99d55ee">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org99d55ee">
+<div id="outline-container-org8957e40" class="outline-3">
+<h3 id="org8957e40">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org8957e40">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-orgeb43d7d" class="outline-3">
-<h3 id="orgeb43d7d">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-orgeb43d7d">
+<div id="outline-container-org5ac340d" class="outline-3">
+<h3 id="org5ac340d">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org5ac340d">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-orgd6a11b1" class="outline-3">
-<h3 id="orgd6a11b1">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-orgd6a11b1">
+<div id="outline-container-org8a9c2c9" class="outline-3">
+<h3 id="org8a9c2c9">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org8a9c2c9">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org55b1847" class="outline-3">
-<h3 id="org55b1847">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org55b1847">
+<div id="outline-container-org1739c4a" class="outline-3">
+<h3 id="org1739c4a">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org1739c4a">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-org0a27922" class="outline-3">
+<div id="outline-container-org222e860" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
