--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ hi i'm luke - this is my blog
 <li><a href="dft.html">discrete fourier transform</a></li>
 <li><a href="ring-modulation.html">ring modulation and frequency shifting</a></li>
 <li><a href="aes-encryption.html">aes encryption</a></li>
+<li><a href="how-this-blog-works.html">how this blog works</a></li>
 </ul>
 </div>
 </body>
