--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org038c0e6" class="outline-2">
-<h2 id="org038c0e6">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org038c0e6">
+<div id="outline-container-org99e1ec6" class="outline-2">
+<h2 id="org99e1ec6">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org99e1ec6">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgfec1028" class="outline-3">
-<h3 id="orgfec1028">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgfec1028">
+<div id="outline-container-org399bcc1" class="outline-3">
+<h3 id="org399bcc1">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org399bcc1">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org1f81b2b" class="outline-4">
-<h4 id="org1f81b2b">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org1f81b2b">
+<div id="outline-container-orgd22464f" class="outline-4">
+<h4 id="orgd22464f">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orgd22464f">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org0c54bef" class="outline-4">
-<h4 id="org0c54bef">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org0c54bef">
+<div id="outline-container-orgb102373" class="outline-4">
+<h4 id="orgb102373">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgb102373">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orgd3a8ee8" class="outline-3">
-<h3 id="orgd3a8ee8">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orgd3a8ee8">
+<div id="outline-container-orge7b524a" class="outline-3">
+<h3 id="orge7b524a">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orge7b524a">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgde8a5d2" class="outline-3">
-<h3 id="orgde8a5d2">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgde8a5d2">
+<div id="outline-container-org10c37e0" class="outline-3">
+<h3 id="org10c37e0">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org10c37e0">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org93e528c" class="outline-3">
-<h3 id="org93e528c">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org93e528c">
+<div id="outline-container-org70eafd7" class="outline-3">
+<h3 id="org70eafd7">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org70eafd7">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org4af370d" class="outline-3">
-<h3 id="org4af370d">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org4af370d">
+<div id="outline-container-org1d1723b" class="outline-3">
+<h3 id="org1d1723b">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org1d1723b">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgcd020b6" class="outline-4">
-<h4 id="orgcd020b6">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgcd020b6">
+<div id="outline-container-org9d164ee" class="outline-4">
+<h4 id="org9d164ee">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org9d164ee">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org676d7f7" class="outline-3">
-<h3 id="org676d7f7">Aliasing</h3>
-<div class="outline-text-3" id="text-org676d7f7">
+<div id="outline-container-org894a421" class="outline-3">
+<h3 id="org894a421">Aliasing</h3>
+<div class="outline-text-3" id="text-org894a421">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org06deeb0" class="outline-3">
-<h3 id="org06deeb0">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org06deeb0">
+<div id="outline-container-org6bbb94a" class="outline-3">
+<h3 id="org6bbb94a">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org6bbb94a">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
