--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgedbe7d0" class="outline-2">
-<h2 id="orgedbe7d0">How this blog works</h2>
-<div class="outline-text-2" id="text-orgedbe7d0">
+<div id="outline-container-orgb720449" class="outline-2">
+<h2 id="orgb720449">How this blog works</h2>
+<div class="outline-text-2" id="text-orgb720449">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org6758acc" class="outline-3">
-<h3 id="org6758acc">Org mode</h3>
-<div class="outline-text-3" id="text-org6758acc">
+<div id="outline-container-org069c19f" class="outline-3">
+<h3 id="org069c19f">Org mode</h3>
+<div class="outline-text-3" id="text-org069c19f">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-org63a3d75" class="outline-3">
-<h3 id="org63a3d75">Github pages</h3>
-<div class="outline-text-3" id="text-org63a3d75">
+<div id="outline-container-org10d93c5" class="outline-3">
+<h3 id="org10d93c5">Github pages</h3>
+<div class="outline-text-3" id="text-org10d93c5">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-org452c71f" class="outline-3">
-<h3 id="org452c71f">Thanks</h3>
-<div class="outline-text-3" id="text-org452c71f">
+<div id="outline-container-org30047c9" class="outline-3">
+<h3 id="org30047c9">Thanks</h3>
+<div class="outline-text-3" id="text-org30047c9">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
