--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ hi i'm luke - this is my blog
 <li><a href="ring-modulation.html">ring modulation and frequency shifting</a></li>
 <li><a href="aes-encryption.html">aes encryption</a></li>
 <li><a href="how-this-blog-works.html">how this blog works</a></li>
+<li><a href="networking-in-lisp.html">tcp sockets in common lisp</a></li>
 </ul>
 </div>
 </body>
