--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org088ad15" class="outline-2">
-<h2 id="org088ad15">404 - page not found</h2>
-<div class="outline-text-2" id="text-org088ad15">
+<div id="outline-container-org39c59ba" class="outline-2">
+<h2 id="org39c59ba">404 - page not found</h2>
+<div class="outline-text-2" id="text-org39c59ba">
 <p>
-my bad probably, i moved some stuff around. head <a href="./index.html">home</a> to find what you are looking for.
+my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
 </div>
 </div>
