--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org68aa1d4" class="outline-2">
-<h2 id="org68aa1d4">How this blog works</h2>
-<div class="outline-text-2" id="text-org68aa1d4">
+<div id="outline-container-org36e2ec1" class="outline-2">
+<h2 id="org36e2ec1">How this blog works</h2>
+<div class="outline-text-2" id="text-org36e2ec1">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org2c54128" class="outline-3">
-<h3 id="org2c54128">Org mode</h3>
-<div class="outline-text-3" id="text-org2c54128">
+<div id="outline-container-org70cba50" class="outline-3">
+<h3 id="org70cba50">Org mode</h3>
+<div class="outline-text-3" id="text-org70cba50">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-orgb1f965a" class="outline-3">
-<h3 id="orgb1f965a">Github pages</h3>
-<div class="outline-text-3" id="text-orgb1f965a">
+<div id="outline-container-org69a2ffc" class="outline-3">
+<h3 id="org69a2ffc">Github pages</h3>
+<div class="outline-text-3" id="text-org69a2ffc">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-org914dd49" class="outline-3">
-<h3 id="org914dd49">Thanks</h3>
-<div class="outline-text-3" id="text-org914dd49">
+<div id="outline-container-org085b461" class="outline-3">
+<h3 id="org085b461">Thanks</h3>
+<div class="outline-text-3" id="text-org085b461">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
