--- a/networking-in-lisp.html
+++ b/networking-in-lisp.html
@@ -17,22 +17,22 @@
 </p>
 
 
-<div id="outline-container-org487541b" class="outline-2">
-<h2 id="org487541b">Look mum, no HTTP client!</h2>
-<div class="outline-text-2" id="text-org487541b">
+<div id="outline-container-org9cdc337" class="outline-2">
+<h2 id="org9cdc337">Look mum, no HTTP client!</h2>
+<div class="outline-text-2" id="text-org9cdc337">
 <p>
 Usually when you want to make an HTTP GET request in your favorite programming language you probably do something like import an HTTP library, make a client, call a GET method on that client and away we go. Just for fun, and to get more familiar with Common Lisp I figured I'd instead make a request from scratch. But, because of Sagan, apple pie and turtles all the way down, I won't be doing anything "from scratch". Instead we'll just be dipping one layer down.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org2b8fbab" class="outline-2">
-<h2 id="org2b8fbab">Networking basics</h2>
-<div class="outline-text-2" id="text-org2b8fbab">
+<div id="outline-container-orgca8bd84" class="outline-2">
+<h2 id="orgca8bd84">Networking basics</h2>
+<div class="outline-text-2" id="text-orgca8bd84">
 </div>
-<div id="outline-container-org2de3c98" class="outline-3">
-<h3 id="org2de3c98">TCP/IP</h3>
-<div class="outline-text-3" id="text-org2de3c98">
+<div id="outline-container-org41900a5" class="outline-3">
+<h3 id="org41900a5">TCP/IP</h3>
+<div class="outline-text-3" id="text-org41900a5">
 
 <div class="figure">
 <p><img src="images/http-layers.png" alt="http-layers.png" />
@@ -55,9 +55,9 @@ TCP ensures that internet applications can talk reliably to each other with erro
 </div>
 </div>
 
-<div id="outline-container-org0d80aac" class="outline-3">
-<h3 id="org0d80aac">Sockets</h3>
-<div class="outline-text-3" id="text-org0d80aac">
+<div id="outline-container-org816e5a9" class="outline-3">
+<h3 id="org816e5a9">Sockets</h3>
+<div class="outline-text-3" id="text-org816e5a9">
 <p>
 Linux sockets are essentially file-like-things that represent network connections. They are identified by a combination of host and port-number. We can write to and read from a socket. Writes will be turned into packets and sent out. Addresses can be a an <code>IP address</code> or a <code>hostname</code>. In the latter case we perform a <code>DNS lookup</code> to get the <code>IP address</code> associated with the <code>hostname</code>.
 </p>
@@ -65,9 +65,9 @@ Linux sockets are essentially file-like-things that represent network connection
 </div>
 </div>
 
-<div id="outline-container-org0ef50da" class="outline-2">
-<h2 id="org0ef50da">Sockets in Common Lisp</h2>
-<div class="outline-text-2" id="text-org0ef50da">
+<div id="outline-container-org21d3e8f" class="outline-2">
+<h2 id="org21d3e8f">Sockets in Common Lisp</h2>
+<div class="outline-text-2" id="text-org21d3e8f">
 <p>
 To play around with sockets in common lisp we are going to use a package called <code>usocket</code>. Start up a REPL and load it up with Quicklisp. Let's set a variable to hold the host address. Initially we'll use the loopback interface (localhost) which is always at <code>127.0.0.1</code>.
 </p>
@@ -170,9 +170,9 @@ And that's it. Keep evaluating the read-line expression to read more lines from 
 </div>
 </div>
 
-<div id="outline-container-org2d1ee6c" class="outline-2">
-<h2 id="org2d1ee6c">Final notes</h2>
-<div class="outline-text-2" id="text-org2d1ee6c">
+<div id="outline-container-orgf7e2fbf" class="outline-2">
+<h2 id="orgf7e2fbf">Final notes</h2>
+<div class="outline-text-2" id="text-orgf7e2fbf">
 <ul class="org-ul">
 <li>The above uses plain HTTP. HTTPS adds a whole layer of complexity that is glossed over here.</li>
 <li>This method is just for fun and learning. If you are making something serious then you'll want to use a fully featured HTTP client library.</li>
