--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org7b4e0f0" class="outline-2">
-<h2 id="org7b4e0f0">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org7b4e0f0">
+<div id="outline-container-orge29c7e6" class="outline-2">
+<h2 id="orge29c7e6">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orge29c7e6">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org6cdd8a1" class="outline-3">
-<h3 id="org6cdd8a1">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org6cdd8a1">
+<div id="outline-container-org51421e6" class="outline-3">
+<h3 id="org51421e6">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org51421e6">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgb37912b" class="outline-4">
-<h4 id="orgb37912b">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgb37912b">
+<div id="outline-container-org294e85d" class="outline-4">
+<h4 id="org294e85d">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org294e85d">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org7edc8be" class="outline-4">
-<h4 id="org7edc8be">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org7edc8be">
+<div id="outline-container-org2ec30b9" class="outline-4">
+<h4 id="org2ec30b9">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org2ec30b9">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org6145baa" class="outline-3">
-<h3 id="org6145baa">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org6145baa">
+<div id="outline-container-org8812c2e" class="outline-3">
+<h3 id="org8812c2e">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org8812c2e">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org758f8b6" class="outline-3">
-<h3 id="org758f8b6">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org758f8b6">
+<div id="outline-container-orgec86272" class="outline-3">
+<h3 id="orgec86272">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgec86272">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org685154d" class="outline-3">
-<h3 id="org685154d">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org685154d">
+<div id="outline-container-orgdc6ceea" class="outline-3">
+<h3 id="orgdc6ceea">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orgdc6ceea">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orgd592955" class="outline-3">
-<h3 id="orgd592955">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orgd592955">
+<div id="outline-container-orga27029c" class="outline-3">
+<h3 id="orga27029c">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-orga27029c">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org3015f48" class="outline-4">
-<h4 id="org3015f48">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org3015f48">
+<div id="outline-container-org50197aa" class="outline-4">
+<h4 id="org50197aa">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org50197aa">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org57bab93" class="outline-3">
-<h3 id="org57bab93">Aliasing</h3>
-<div class="outline-text-3" id="text-org57bab93">
+<div id="outline-container-org8ef3dbb" class="outline-3">
+<h3 id="org8ef3dbb">Aliasing</h3>
+<div class="outline-text-3" id="text-org8ef3dbb">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org9d0dd6e" class="outline-3">
-<h3 id="org9d0dd6e">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org9d0dd6e">
+<div id="outline-container-org26357fa" class="outline-3">
+<h3 id="org26357fa">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org26357fa">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
