add link to simple flashcards

--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orge29c7e6" class="outline-2">
-<h2 id="orge29c7e6">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-orge29c7e6">
+<div id="outline-container-org890dfb7" class="outline-2">
+<h2 id="org890dfb7">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org890dfb7">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org51421e6" class="outline-3">
-<h3 id="org51421e6">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org51421e6">
+<div id="outline-container-org311b682" class="outline-3">
+<h3 id="org311b682">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org311b682">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org294e85d" class="outline-4">
-<h4 id="org294e85d">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org294e85d">
+<div id="outline-container-org5132277" class="outline-4">
+<h4 id="org5132277">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org5132277">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org2ec30b9" class="outline-4">
-<h4 id="org2ec30b9">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org2ec30b9">
+<div id="outline-container-org9452c2e" class="outline-4">
+<h4 id="org9452c2e">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org9452c2e">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org8812c2e" class="outline-3">
-<h3 id="org8812c2e">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org8812c2e">
+<div id="outline-container-org6a6d627" class="outline-3">
+<h3 id="org6a6d627">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org6a6d627">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgec86272" class="outline-3">
-<h3 id="orgec86272">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgec86272">
+<div id="outline-container-org361f83e" class="outline-3">
+<h3 id="org361f83e">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org361f83e">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-orgdc6ceea" class="outline-3">
-<h3 id="orgdc6ceea">SSB Modulation</h3>
-<div class="outline-text-3" id="text-orgdc6ceea">
+<div id="outline-container-org74932ad" class="outline-3">
+<h3 id="org74932ad">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org74932ad">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orga27029c" class="outline-3">
-<h3 id="orga27029c">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orga27029c">
+<div id="outline-container-org8f673b6" class="outline-3">
+<h3 id="org8f673b6">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org8f673b6">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org50197aa" class="outline-4">
-<h4 id="org50197aa">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org50197aa">
+<div id="outline-container-org82aaccd" class="outline-4">
+<h4 id="org82aaccd">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org82aaccd">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org8ef3dbb" class="outline-3">
-<h3 id="org8ef3dbb">Aliasing</h3>
-<div class="outline-text-3" id="text-org8ef3dbb">
+<div id="outline-container-org0d636c6" class="outline-3">
+<h3 id="org0d636c6">Aliasing</h3>
+<div class="outline-text-3" id="text-org0d636c6">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org26357fa" class="outline-3">
-<h3 id="org26357fa">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org26357fa">
+<div id="outline-container-org081cc77" class="outline-3">
+<h3 id="org081cc77">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org081cc77">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
