--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgcd23970" class="outline-2">
-<h2 id="orgcd23970">How this blog works</h2>
-<div class="outline-text-2" id="text-orgcd23970">
+<div id="outline-container-org255c8d4" class="outline-2">
+<h2 id="org255c8d4">How this blog works</h2>
+<div class="outline-text-2" id="text-org255c8d4">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org1509f0b" class="outline-3">
-<h3 id="org1509f0b">Org mode</h3>
-<div class="outline-text-3" id="text-org1509f0b">
+<div id="outline-container-orge58fd65" class="outline-3">
+<h3 id="orge58fd65">Org mode</h3>
+<div class="outline-text-3" id="text-orge58fd65">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-org8810076" class="outline-3">
-<h3 id="org8810076">Github pages</h3>
-<div class="outline-text-3" id="text-org8810076">
+<div id="outline-container-org18ac14b" class="outline-3">
+<h3 id="org18ac14b">Github pages</h3>
+<div class="outline-text-3" id="text-org18ac14b">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orgba22b46" class="outline-3">
-<h3 id="orgba22b46">Thanks</h3>
-<div class="outline-text-3" id="text-orgba22b46">
+<div id="outline-container-org93777e9" class="outline-3">
+<h3 id="org93777e9">Thanks</h3>
+<div class="outline-text-3" id="text-org93777e9">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
