--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ hi i'm luke - this is my blog
 <li><a href="aes-encryption.html">aes encryption</a></li>
 <li><a href="how-this-blog-works.html">how this blog works</a></li>
 <li><a href="networking-in-lisp.html">tcp sockets in common lisp</a></li>
+<li><a href="https://larzeitlin.github.io/simple-flashcards">simple flashcards</a></li>
 </ul>
 </div>
 </body>
