--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgd4cd6ec" class="outline-2">
-<h2 id="orgd4cd6ec">Convolution</h2>
-<div class="outline-text-2" id="text-orgd4cd6ec">
+<div id="outline-container-org00c0275" class="outline-2">
+<h2 id="org00c0275">Convolution</h2>
+<div class="outline-text-2" id="text-org00c0275">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org2c1a780" class="outline-3">
-<h3 id="org2c1a780">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org2c1a780">
+<div id="outline-container-org43309e5" class="outline-3">
+<h3 id="org43309e5">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org43309e5">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-orgd3a79ed" class="outline-3">
-<h3 id="orgd3a79ed">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-orgd3a79ed">
+<div id="outline-container-org225bd77" class="outline-3">
+<h3 id="org225bd77">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org225bd77">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org3237488" class="outline-3">
-<h3 id="org3237488">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org3237488">
+<div id="outline-container-orgfe705ba" class="outline-3">
+<h3 id="orgfe705ba">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-orgfe705ba">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-org37b8f12" class="outline-3">
-<h3 id="org37b8f12">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-org37b8f12">
+<div id="outline-container-org4a8c77e" class="outline-3">
+<h3 id="org4a8c77e">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org4a8c77e">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-orgb8d5278" class="outline-3">
+<div id="outline-container-orga355ea0" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
