--- a/dft.html
+++ b/dft.html
@@ -39,9 +39,9 @@
 </p>
 
 
-<div id="outline-container-orgc800380" class="outline-2">
-<h2 id="orgc800380">Discrete Fourier Transform</h2>
-<div class="outline-text-2" id="text-orgc800380">
+<div id="outline-container-org46fdf7b" class="outline-2">
+<h2 id="org46fdf7b">Discrete Fourier Transform</h2>
+<div class="outline-text-2" id="text-org46fdf7b">
 <p>
 This is just my understanding / intuitive explanation of what this algorithm means.
 </p>
@@ -74,9 +74,9 @@ and phase?"</i></li>
 </ul>
 </div>
 
-<div id="outline-container-org9be119c" class="outline-3">
-<h3 id="org9be119c">A Roundabout Introduction</h3>
-<div class="outline-text-3" id="text-org9be119c">
+<div id="outline-container-orge3de292" class="outline-3">
+<h3 id="orge3de292">A Roundabout Introduction</h3>
+<div class="outline-text-3" id="text-orge3de292">
 <p>
 <a href="https://en.wikipedia.org/wiki/Joseph_Fourier">Joseph Fourier</a>
 was a French mathematician who was doing his thing at the end of the 18th to
@@ -90,9 +90,9 @@ sinusoids.
 </p>
 </div>
 
-<div id="outline-container-org21c7ce4" class="outline-4">
-<h4 id="org21c7ce4">Sinusoids, circles and epicycles</h4>
-<div class="outline-text-4" id="text-org21c7ce4">
+<div id="outline-container-org2299ec1" class="outline-4">
+<h4 id="org2299ec1">Sinusoids, circles and epicycles</h4>
+<div class="outline-text-4" id="text-org2299ec1">
 <p>
 Let's start by thinking of a sinusoid as an aspect of circular movement
 in relation to time. As we probably all learned in school at some stage,
@@ -183,9 +183,9 @@ here, and the end result is intuitive.
 </div>
 </div>
 
-<div id="outline-container-org2831bf2" class="outline-4">
-<h4 id="org2831bf2">Amplitude and Phase</h4>
-<div class="outline-text-4" id="text-org2831bf2">
+<div id="outline-container-org6e24be2" class="outline-4">
+<h4 id="org6e24be2">Amplitude and Phase</h4>
+<div class="outline-text-4" id="text-org6e24be2">
 <p>
 What we do need is a method to find out <b>which sinusoids</b> are in a given
 signal. Just the frequency of those sinusoids isn't enough information.
@@ -241,9 +241,9 @@ of the article
 </div>
 </div>
 
-<div id="outline-container-org0ee9487" class="outline-3">
-<h3 id="org0ee9487">Imaginary and Complex Numbers</h3>
-<div class="outline-text-3" id="text-org0ee9487">
+<div id="outline-container-org7c86994" class="outline-3">
+<h3 id="org7c86994">Imaginary and Complex Numbers</h3>
+<div class="outline-text-3" id="text-org7c86994">
 <p>
 \[i = \sqrt{−1}\]
 </p>
@@ -321,9 +321,9 @@ boot up some other concepts we'll need.
 </div>
 </div>
 
-<div id="outline-container-org2ebbc20" class="outline-3">
-<h3 id="org2ebbc20">Euler's Number</h3>
-<div class="outline-text-3" id="text-org2ebbc20">
+<div id="outline-container-orga0c4c68" class="outline-3">
+<h3 id="orga0c4c68">Euler's Number</h3>
+<div class="outline-text-3" id="text-orga0c4c68">
 <p>
 Usually known as simply e, Euler's number is a mathematical constant.
 It's a real,
@@ -334,9 +334,9 @@ how we get to e through an analogy to compound interest.
 </p>
 </div>
 
-<div id="outline-container-org5fd902a" class="outline-4">
-<h4 id="org5fd902a">Growth</h4>
-<div class="outline-text-4" id="text-org5fd902a">
+<div id="outline-container-org9b9c1ca" class="outline-4">
+<h4 id="org9b9c1ca">Growth</h4>
+<div class="outline-text-4" id="text-org9b9c1ca">
 <p>
 This section seems pretty unrelated at first, but it's actually key to
 understanding the DFT. I should add that this bank loan analogy is just
@@ -453,7 +453,7 @@ help us make a tool for seeking out sinusoids in a signal.
 </div>
 </div>
 
-<div id="outline-container-org39ad851" class="outline-4">
+<div id="outline-container-org00d05b9" class="outline-4">
 <h4 id="imaginary-growth-is-anticlockwise-rotation">Imaginary Growth is Anticlockwise Rotation</h4>
 <div class="outline-text-4" id="text-imaginary-growth-is-anticlockwise-rotation">
 <p>
@@ -508,9 +508,9 @@ The upshot is we can use e to make circles. This is the basis of the
 </div>
 </div>
 
-<div id="outline-container-org2b16dc0" class="outline-3">
-<h3 id="org2b16dc0">Complex sinusoid</h3>
-<div class="outline-text-3" id="text-org2b16dc0">
+<div id="outline-container-orgea19545" class="outline-3">
+<h3 id="orgea19545">Complex sinusoid</h3>
+<div class="outline-text-3" id="text-orgea19545">
 <p>
 The complex sinusoid is really just the sum of two sinusoids, one real
 and one imaginary. These two sinusoids are in <i>phase quadrature</i>, which
@@ -588,9 +588,9 @@ Using a complex sinusoid helps us keep it all compact and tidy.
 </div>
 </div>
 
-<div id="outline-container-orgb3e23a4" class="outline-3">
-<h3 id="orgb3e23a4">The Discrete Fourier Transform</h3>
-<div class="outline-text-3" id="text-orgb3e23a4">
+<div id="outline-container-org49c909a" class="outline-3">
+<h3 id="org49c909a">The Discrete Fourier Transform</h3>
+<div class="outline-text-3" id="text-org49c909a">
 <p>
 We've got all the bits we need! We're going to just dive in:
 </p>
@@ -686,9 +686,9 @@ You may be asking yourself&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org86239d8" class="outline-4">
-<h4 id="org86239d8">Why are we multiplying our input signal by sinusoids?</h4>
-<div class="outline-text-4" id="text-org86239d8">
+<div id="outline-container-orgde41054" class="outline-4">
+<h4 id="orgde41054">Why are we multiplying our input signal by sinusoids?</h4>
+<div class="outline-text-4" id="text-orgde41054">
 <p>
 The complex sinusoid is different for each bin. It's frequency is set by
 k. This complex sinusoid hunts for a sinusoid that matches it in our
@@ -760,9 +760,9 @@ through some examples:
 </div>
 </div>
 
-<div id="outline-container-org6a49a06" class="outline-4">
-<h4 id="org6a49a06">Examples</h4>
-<div class="outline-text-4" id="text-org6a49a06">
+<div id="outline-container-orgf37326b" class="outline-4">
+<h4 id="orgf37326b">Examples</h4>
+<div class="outline-text-4" id="text-orgf37326b">
 <p>
 We'll start with a signal to test. Here's a signal made from two
 sinusoids. We'll use the just the real part of the DFT to find out which
@@ -857,7 +857,7 @@ a static frequency spectrum of that sound.
 </div>
 </div>
 
-<div id="outline-container-orga8944e3" class="outline-3">
+<div id="outline-container-org6c19945" class="outline-3">
 <h3 id="some-properties-of-the-dft">Some Properties of the DFT</h3>
 <div class="outline-text-3" id="text-some-properties-of-the-dft">
 <p>
@@ -915,7 +915,7 @@ you'll have to divide it by N.
 </div>
 </div>
 
-<div id="outline-container-org80cd6b2" class="outline-3">
+<div id="outline-container-org0499d69" class="outline-3">
 <h3 id="where-next">Where next?</h3>
 <div class="outline-text-3" id="text-where-next">
 <p>
